--- a/css/landingstyles.css
+++ b/css/landingstyles.css
@@ -2,7 +2,14 @@
 background: black;
 }
 
-
+#introimage {
+  width: 100%;
+  height: 550px;
+  background-image: url("images/IntroPAR165575.jpg");
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: cover;
+}
 
 h1, h2, h3, h4, h5, h6, p {
   color: #c3BDBD;
@@ -14,7 +21,7 @@ h1, h2, h3, h4, h5, h6, p {
 h1 {
   font-size: 90px;
   margin-bottom: 10px;
-  margin-top: 60px;
+  margin-top: 40px;
   letter-spacing: -0.03em;
 }
 
