--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,6 @@ h3 {
 
 h4 {
   font-size: 22px;
-  letter-spacing: 0.03em;
   font-weight: 500;
   width: 20%;
   margin-top: 5%;
@@ -210,9 +209,10 @@ h4 {
   float: right;
   font-weight: 500;
   width: 35%;
-  margin-right: 10%;
+  margin-right: 5%;
   margin-left: 0;
   color: black;
+  letter-spacing: normal;
 }
 
 .whiteTypeLeft {
@@ -250,6 +250,7 @@ h4 {
   margin-left: 6%;
   margin-right: 0;
   color: black;
+  letter-spacing: normal;
 }
 
 .whiteTypeBottomLeft {
@@ -316,7 +317,7 @@ h4 {
 
 .linknavh1 {
   font-weight: 400;
-  font-size: 70px;
+  font-size: 80px;
   margin-bottom: 10px;
   margin-top: 60px;
   letter-spacing: -0.03em;
