fix colors of nav dots

--- a/css/jquery.pagepiling.css
+++ b/css/jquery.pagepiling.css
@@ -94,7 +94,7 @@ html, body {
 }
 #pp-nav li .active span,
 .pp-slidesNav .active span {
-    background: rgba(126, 126, 126, 1);
+    background: white;
 }
 #pp-nav span,
 .pp-slidesNav span {
@@ -103,7 +103,7 @@ html, body {
     width: 8px;
     height: 8px;
     border: 1px solid white;
-    background: rgba(46, 46, 46, 1);
+    background: rgba(125, 125, 125, 1);
     border-radius: 50%;
     position: absolute;
     z-index: 1;
