--- a/css/landingstyles.css
+++ b/css/landingstyles.css
@@ -2,6 +2,11 @@
 background: black;
 }
 
+.landingPageIntro {
+  clear: both;
+}
+
+
 #introimage {
   width: 100%;
   height: 550px;
@@ -43,6 +48,16 @@ h4, h5 {
   font-size: 16px;
   font-weight: 300;
   line-height: 1.4;
+}
+
+h6 {
+  font-weight: 500;
+  font-size: 14px;
+  display: block;
+  float: right;
+  margin-top: 6px;
+  margin-bottom: 20px;
+  margin-right: 10px;
 }
 
 a {
